visual feedback for liking ideas, fixed word wrap in filterbox idea item

--- a/brainstorm/client/hcomp/facilitation/filterbox.css
+++ b/brainstorm/client/hcomp/facilitation/filterbox.css
@@ -50,11 +50,20 @@
 	/*height:70%;*/
 }
 
-.hcomp-dashboard .idea-item .vote-box {
-  position: absolute;
-  right: 15px;
-  top: 10px;
+.idea-item .vote-box {
+  /*position: absolute;*/
+  /*right: 15px;*/
+  /*top: 10px;*/
   height: 1.5em;
+  vertical-align: center;
+  font-size:13.5px;
+  padding:0px 20px 0px 0px;
+  text-align:right;
+}
+
+.idea-item .filterbox-idea-content {
+	padding-left:20px;
+	/*padding-right:15px;*/
 }
 
 .hcomp-dashboard .idea-item .vote-box .vote {
